--- a/project/articles_page.html
+++ b/project/articles_page.html
@@ -38,7 +38,7 @@
 					<h2>Статьи</h2>
 				</div>
 				<div class="block-content block-content_full">
-					<a href="Source/articles/Андреева Е.А. Управление динамическими системами.pdf" target="_blank">
+					<a href="Source/articles/Andreeva.pdf" target="_blank">
 						<div class="block-content-header">
 							<h3>Управление динамическими системами</h3>
 						</div>
@@ -59,7 +59,7 @@
 				</div>
 
 				<div class="block-content block-content_full">
-					<a href="Source/articles/Семыкина Н.А. Шаповалова И.А. МАТЕМАТИЧЕСКИЕ МОДЕЛИ В ИНФОРМАЦИОННОЙ БЕЗОПАСНОСТИ.pdf" target="_blank">
+					<a href="Source/articles/math_model.pdf" target="_blank">
 						<div class="block-content-header">
 							<h3>МАТЕМАТИЧЕСКИЕ МОДЕЛИ В ИНФОРМАЦИОННОЙ БЕЗОПАСНОСТИ</h3>
 						</div>
@@ -78,7 +78,7 @@
 					</a>
 				</div>
 				<div class="block-content block-content_full">
-					<a href="Source/articles/Семыкина Н.А. Шаповалова И.А. Нейросетевой подход при моделировании DDOS-атак.pdf" target="_blank">
+					<a href="Source/articles/neiro_.pdf.pdf" target="_blank">
 						<div class="block-content-header">
 							<h3>Нейросетевой подход при моделировании DDOS-атак</h3>
 						</div>
