--- a/project/index.html
+++ b/project/index.html
@@ -36,7 +36,7 @@
 					<h2>Статьи</h2>
 				</div>
 				<div class="block-content">
-					<a href="Source/articles/Андреева Е.А. Управление динамическими системами.pdf" target="_blank">
+					<a href="Source/articles/Andreeva.pdf" target="_blank">
 						<div class="block-content-header">
 								<h3>
 									Управление динамическими системами
@@ -58,7 +58,7 @@
 					</a>
 				</div>
 				<div class="block-content">
-					<a href="Source/articles/Семыкина Н.А. Шаповалова И.А. МАТЕМАТИЧЕСКИЕ МОДЕЛИ В ИНФОРМАЦИОННОЙ БЕЗОПАСНОСТИ.pdf" target="_blank">
+					<a href="Source/articles/math_model.pdf" target="_blank">
 						<div class="block-content-header">
 							<h3>
 								МАТЕМАТИЧЕСКИЕ МОДЕЛИ В ИНФОРМАЦИОННОЙ БЕЗОПАСНОСТИ
