--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 				<img src="Source/img/Logo_tvgu_header.png" alt="Лого">
 				<a href="index.html"><h1>Образовательный ресурс</h1></a>
 				<div class="login">
-					<a href="feedback_page.html">Вход</a>
-					<a href="#">Регистрация</a>
+					<a href="feedback_page.html">Добавить</a>
 				</div>
 			</div>
 		</header>
