--- a/NPAs_page.html
+++ b/NPAs_page.html
@@ -24,7 +24,7 @@
 					<input class="search" name="s" type="search" autocomplete="off">
 				</form>
 			<ul>
-				<li class="li"><a href="articles_page.html">Статьи</a></li>
+				<li class="li"><a href="articles_page.html">Публикации</a></li>
 				<li><a href="NPAs_page.html">НПА</a></li>
 				<li><a href="lectures_page.html">Лекции</a></li>
 				<li><a href="files_page.html">Файлы</a></li>
