--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<input class="search" name="s" type="search" autocomplete="off">
 				</form>
 			<ul>
-				<li class="li"><a href="articles_page.html">Статьи</a></li>
+				<li class="li"><a href="articles_page.html">Публикации</a></li>
 				<li><a href="NPAs_page.html">НПА</a></li>
 				<li><a href="lectures_page.html">Лекции</a></li>
 				<li><a href="files_page.html">Файлы</a></li>
@@ -32,7 +32,7 @@
 		<section>
 			<div class="block">
 				<div class="block-header">
-					<h2>Статьи</h2>
+					<h2>Публикации</h2>
 				</div>
 				<div class="block-content">
 					<a href="Source/articles/Andreeva.pdf" target="_blank">
