--- a/articles_page.html
+++ b/articles_page.html
@@ -24,7 +24,7 @@
 					<input class="search" name="s" type="search" autocomplete="off">
 				</form>
 			<ul>
-				<li class="li"><a href="articles_page.html">Статьи</a></li>
+				<li class="li"><a href="articles_page.html">Публикации</a></li>
 				<li><a href="NPAs_page.html">НПА</a></li>
 				<li><a href="lectures_page.html">Лекции</a></li>
 				<li><a href="files_page.html">Файлы</a></li>
@@ -34,7 +34,7 @@
 		<section>
 			<div class="block block_full">
 				<div class="block-header block-header_full">
-					<h2>Статьи</h2>
+					<h2>Публикации</h2>
 				</div>
 				<div class="block-content block-content_full">
 					<a href="Source/articles/Andreeva.pdf" target="_blank">
