--- a/feedback_page.html
+++ b/feedback_page.html
@@ -40,7 +40,7 @@
 					
 					<div class="block-content-description-feedback">
 						<p>
-							Для добавления материалов, необходимо отправить заявку по адресу <a href="#">support@mail.ru</a>
+							Для добавления материалов, необходимо отправить заявку по адресу <a href="mailto:moder_edures@mail.ru">moder_edures@mail.ru</a>
 						</p>
 						<p>
 							К заявке необходимо приложить документ, содержащий информацию о материале
@@ -64,8 +64,12 @@
 							<a href="шаблон_заявки.docx" download>Скачать шаблон_заявки.docx</a>
 						</div>
 						<p>
-							По всем вопросам обрщайтесь в группу WhatsApp: <a href="#">edu69</a> 
+							По всем вопросам обрщайтесь в группу WhatsApp: <a target="_blanck" href="https://chat.whatsapp.com/JmGvmAtLZwm6WPfaYiSOyc">Горячая линия EduRes</a> 
 						</p>
+						<p>
+							Вход по QR-коду:
+						</p>
+						<img src="Source/img/qr_edures.jpg" width="300px">
 					</div>
 				</div>
 			</div>
