--- a/files_page.html
+++ b/files_page.html
@@ -31,9 +31,99 @@
 		</nav>
 
 		<section>
-			<div class="block block_full">
+			<div class="block block_files">
 				<div class="block-header block-header_full">
 					<h2>Хранилище файлов</h2>
+				</div>
+				<div class="block-content block-content_full">
+					<a href="Source/files/Data_preprocessing2.pdf" target="_blank">
+						<div class="block-content-header">
+							<h3>Предобработка данных</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Пособие содержит методические данные для выполнения лабороторных работ в Loginom
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Добавила: Царькова Е.Г.</p>
+						</div>
+					</a>
+				</div>
+				<div class="block-content block-content_full">
+					<a href="Source/files/DataSet 1 _ Financial Sample.xlsx" target="_blank">
+						<div class="block-content-header">
+							<h3>Финансовая выборка</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Дата сет с финансовой выборкой по различным сегментам и странам
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Добавила: Царькова Е.Г.</p>
+						</div>
+					</a>
+				</div>
+				<div class="block-content block-content_full">
+					<a href="Source/files/Задача 2.1. Продажа автомобилей.xlsx" target="_blank">
+						<div class="block-content-header">
+							<h3>Продажа автомобилей</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Задача 2.1
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Добавила: Царькова Е.Г.</p>
+						</div>
+					</a>
+				</div>
+				<div class="block-content block-content_full">
+					<a href="Source/files/Задача 2.2. Стоимость набора продуктов питания.xlsx" target="_blank">
+						<div class="block-content-header">
+							<h3>Стоимость набора продуктов питания</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Задача 2.2
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Добавила: Царькова Е.Г.</p>
+						</div>
+					</a>
+				</div>
+				<div class="block-content block-content_full">
+					<a href="Source/files/Задача 2.3. Услуги сотовой связи.xlsx" target="_blank">
+						<div class="block-content-header">
+							<h3>Услуги сотовой связи</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Задача 2.3
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Добавила: Царькова Е.Г.</p>
+						</div>
+					</a>
+				</div>
+				<div class="block-content block-content_full">
+					<a href="Source/files/Задача 2.4. Цена на куриные яйца.xlsx" target="_blank">
+						<div class="block-content-header">
+							<h3>Услуги сотовой связи</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Задача 2.4
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Добавила: Царькова Е.Г.</p>
+						</div>
+					</a>
 				</div>
 				<div class="block-content block-content_full">
 					<a href="Source/files/Cluster irises.txt" target="_blank">
