--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,21 +8,24 @@
 	<link rel="stylesheet" href="style.css">
 	<script src="jquery-3.6.0.min.js"></script>
 </head>
+
 <body>
 	<div class="content">
 		<header>
 			<div class="header">
 				<img src="Source/img/Logo_tvgu_header.png" alt="Лого">
-				<a href="index.html"><h1>Образовательный ресурс</h1></a>
+				<a href="index.html">
+					<h1>Образовательный ресурс</h1>
+				</a>
 				<div class="login">
 					<a href="feedback_page.html">Добавить</a>
 				</div>
 			</div>
 		</header>
 		<nav>
-				<form action="" method="get" onsubmit="return false">
-					<input class="search" name="s" type="search" autocomplete="off">
-				</form>
+			<form action="" method="get" onsubmit="return false">
+				<input class="search" name="s" type="search" autocomplete="off">
+			</form>
 			<ul>
 				<li class="li"><a href="articles_page.html">Публикации</a></li>
 				<li><a href="NPAs_page.html">НПА</a></li>
@@ -37,9 +41,9 @@
 				<div class="block-content">
 					<a href="Source/articles/Andreeva.pdf" target="_blank">
 						<div class="block-content-header">
-								<h3>
-									Управление динамическими системами
-								</h3>
+							<h3>
+								Управление динамическими системами
+							</h3>
 						</div>
 						<div class="block-content-description">
 							<p>
@@ -52,7 +56,7 @@
 							</p>
 						</div>
 						<div class="block-content-author">
-								<p>Автор: Андреева Е.А.</p>
+							<p>Автор: Андреева Е.А.</p>
 						</div>
 					</a>
 				</div>
@@ -73,7 +77,7 @@
 							</p>
 						</div>
 						<div class="block-content-author">
-								<p>Авторы: Семыкина Н.А. Шаповалова И.А.</p>
+							<p>Авторы: Семыкина Н.А. Шаповалова И.А.</p>
 						</div>
 					</a>
 				</div>
@@ -97,7 +101,7 @@
 							</p>
 						</div>
 						<div class="block-content-author">
-								<p>Преподаватель: ???</p>
+							<p>Преподаватель: ???</p>
 						</div>
 					</a>
 				</div>
@@ -114,7 +118,7 @@
 							</p>
 						</div>
 						<div class="block-content-author">
-								<p>Преподаватель: ???</p>
+							<p>Преподаватель: ???</p>
 						</div>
 					</a>
 				</div>
@@ -126,33 +130,32 @@
 					<h2>Файлы</h2>
 				</div>
 				<div class="block-content">
-					<a href="Source/files/Cluster irises.txt" target="_blank">
+					<a href="Source/files/Data_preprocessing2.pdf" target="_blank">
 						<div class="block-content-header">
-							<h3>Ирис виргинский</h3>
+							<h3>Предобработка данных</h3>
 						</div>
 						<div class="block-content-description">
 							<p>
-								Статистика с параметрами вида растения 
-								"Ирис виргинский" для анализа.
+								Пособие содержит методические данные для выполнения лабороторных работ в Loginom
 							</p>
 						</div>
 						<div class="block-content-author">
-								<p>Добавила: Царькова Е.Г.</p>
+							<p>Добавила: Царькова Е.Г.</p>
 						</div>
 					</a>
 				</div>
 				<div class="block-content">
-					<a href="Source/files/abc-xyz.txt" target="_blank">
+					<a href="Source/files/DataSet 1 _ Financial Sample.xlsx" target="_blank">
 						<div class="block-content-header">
-							<h3>Товары</h3>
+							<h3>Финансовая выборка</h3>
 						</div>
 						<div class="block-content-description">
 							<p>
-								Статистика продаж товаров по месяцам для анализа.
+								Дата сет с финансовой выборкой по различным сегментам и странам
 							</p>
 						</div>
 						<div class="block-content-author">
-								<p>Добавила: Царькова Е.Г.</p>
+							<p>Добавила: Царькова Е.Г.</p>
 						</div>
 					</a>
 				</div>
@@ -170,4 +173,5 @@
 	<script src="script.js">
 	</script>
 </body>
+
 </html>
